# navagfx-engine

./: .gitignore  Cargo.toml  navagfx-engine.code-workspace
assets/shaders/: shader_quad.wgsl
core/assets/shaders/: shader_quad.wgsl
core/src/: application.rs  assets.rs  export.rs  graphics.rs  lib.rs  macros.rs
core/src/application/: event.rs  input.rs
core/src/assets/: loaders.rs  texture.rs
core/src/graphics/: renderer2d.rs  shapes.rs
examples/breakout/: Cargo.toml  dist-workspace.toml
examples/breakout/assets/: two.lvl
examples/breakout/assets/levels/: one.lvl  three.lvl  two.lvl
examples/breakout/src/: game.rs  main.rs  physics.rs
examples/breakout/src/game/: entities.rs  game_state.rs
examples/navagfx-engine-test/: Cargo.toml
examples/navagfx-engine-test/src/: main.rs
src/: application.rs  export.rs  graphics.rs  lib.rs
src/application/: event.rs
src/assets/: texture.rs
src/graphics/: camera.rs  renderer2d.rs  shapes.rs
testing/navagfx-engine-test/: Cargo.toml
testing/navagfx-engine-test/src/: main.rs
