[package]
name = "breakout"
version = "0.1.0"
edition = "2024"
authors = ["ysfham"]
description = "Breakout game clone from LearnOpenGL book"


[dependencies]
navagfx-engine = { path = "../../core" }
simple_logger = { version = "5.0.0", optional = true}
log = { version = "0.4"}


[features]
console = ["dep:simple_logger"]


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
